sort.baseball.NaiveBaseball.scala.error
Compilation error:
NaiveBaseball:16: error: reassignment to val
     base = base + 1 
          ^